# synesis2neo4j

./: .gitignore  CHANGELOG.md  CHANGELOG.pt.md  CLAUDE.md  GraphQLite_Reference.md  LICENSE  README.md  README.pt.md  config.toml  graph.php  multidb_plan.md  pyproject.toml  synesis2graph.py  synesis2neo4j.py
docs/: PLANO_CORRECAO_CHAIN_CAUSATION.md
graphs/: Davi.db
mcp/: QUERIES_REFERENCE.en.md  QUERIES_REFERENCE.md  SETUP.en.md  SETUP.md  claude_desktop_config.multi.template.json  claude_desktop_config.template.json
synesis_graph/: __init__.py  cli.py
templates/: graph.html.tmpl
